打包的dmg可以用sqldelight了